# UBB-CS-Projects

./: .gitignore  .gitmodules  README.md
MAP/Curs 11/: Examples.rar
MAP/Practic/: settings.gradle
MAP/Seminarii/: Seminar_sapt6.rar  sem10_conc.rar  sem7gui.rar  sem9.rar
RETELE DE CALCULATOARE/Cisco Tema Retea/: retea.pkt
RETELE DE CALCULATOARE/Example Lab 1c/: CMakeLists.txt  serverUDP.c
RETELE DE CALCULATOARE/Lab 10/: retea.pkt
RETELE DE CALCULATOARE/Lab 11 Dirijare/: lab11_rutare_dinamica.pkt  lab11_rutare_statica.pkt
RETELE DE CALCULATOARE/Lab 8/: retea2.pkt
RETELE DE CALCULATOARE/ReteleTest/: CMakeLists.txt  client  server.c
Semestrul 4/ISS/: Diagrams.mdj  (+1 more)
Semestrul 5/PPD/Laborator1/ConvolutionCpp/: CMakeLists.txt  fullScriptC.ps1  fullScriptC_D.ps1  main_dynamic.cpp  main_static.cpp  outC_D.csv  outC_D2.csv  outC_S.csv  outJ.csv
Semestrul 5/PPD/Laborator1/ConvolutionCpp/data/input/: data_1000_1000_5.txt
Semestrul 5/PPD/Laborator1/ConvolutionCpp/distributor/: BlockDistributor.cpp  BlockDistributor.h  CyclicDistributor.cpp  CyclicDistributor.h  Distributor.h  LinearDistributor.cpp  LinearDistributor.h
Semestrul 5/PPD/Laborator1/ConvolutionCpp/thread/: BlockConvolutionThread.cpp  BlockConvolutionThread.h  CyclicConvolutionThread.cpp  CyclicConvolutionThread.h  LinearConvolutionThread.cpp  LinearConvolutionThread.h
Semestrul 5/PPD/Laborator1/ConvolutionCpp/util/: Convolution.cpp  Convolution.h  SequentialConvolution.cpp  SequentialConvolution.h  matrixFileHandler.cpp  matrixFileHandler.h  matrixUtils.cpp  matrixUtils.h  technique.h
(+1657 files in other folders)
